Added css and javascript files in html page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Git Demo</title>
+    <link href="css/app.css"  rel="stylesheet"/>
+    <script type="text/javascript" src="js/app.js"></script>
   </head>
   <body>
     <h1>Git Demo page</h1>
