added paragraph and its style in css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Git Demo page</h1>
+    <p>This is just a demo html page to demonstrate git functionalities</p>
   </body>
 
 </html>
