--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Git Demo</title>
     <link href="css/app.css"  rel="stylesheet"/>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/test.js"></script>
     <script>
       console.log("Value of D: " + d);
     </script>
