--- a/index.html
+++ b/index.html
@@ -1,7 +1,372 @@
 <html>
-  <head><title>SCM Demo</title></head>
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SPORTSTAR :: Home</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+
+    <!-- Custom CSS -->
+    <link href="css/app.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+         <script src="template/1-0-1/js/html5shiv.js"></script>
+        <script src="template/1-0-1/js/respond.js"></script>
+    <![endif]-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+     <script src="js/app.js"></script>
+
+</head>
+
+
   <body>
-    <h1>SCM Demo</h1>
-    <p>Git scm</p>
+    <h1>SS Demo</h1>
+    <div class="container withSideBar">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-lg-9  leftContent">
+              <!-- Ticker area -->
+              <div class="row">
+                <div class="col-lg-12">
+                  <img src="http://theceweb.thehindu.co.in/multimedia/archive/00326/ticker_326775a.png" class="img-responsive" />
+                </div>
+              </div>
+              <div class="spacer10"></div>
+              <!-- Trending Area -->
+              <div class="trendingHolder " >
+                <div class="col-lg-12 lavendarColor trendingHeadingHolder">
+                  <h3 class="trendingHeading">Trending</h3>
+                </div>
+                <div class="spacer15 col-lg-12"></div>
+                <!-- Trending Holder articles -->
+                <div class="lg-col-12 lavendarColor clearfix no-gutter testC carousel slide">
+                  <div class="trendingArtHolder carousel-inner clearfix">
+                    <div class="col-lg-4 no-gutter item active">
+                      <div class="col-xs-12 col-lg-12">
+                        <div class="col-lg-6  xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/people-q-c-1335-890-9.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 no-gutter item">
+                      <div class="col-xs-12 col-lg-12 ">
+                        <div class="col-lg-6 xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/city-q-c-1335-890-10.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 no-gutter item">
+                      <div class="col-xs-12 col-lg-12 ">
+                        <div class="col-lg-6 xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/abstract-q-c-1335-890-7.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test ends in a tame draw</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 no-gutter item">
+                      <div class="col-xs-12 col-lg-12 ">
+                        <div class="col-lg-6 xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/people-q-c-1335-890-10.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 no-gutter item">
+                      <div class="col-xs-12 col-lg-12 ">
+                        <div class="col-lg-6 xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/people-q-c-1335-890-7.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 no-gutter item">
+                      <div class="col-xs-12 col-lg-12 ">
+                        <div class="col-lg-6 xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/city-q-c-1335-890-10.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test </p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 no-gutter item">
+                      <div class="col-xs-12 col-lg-12 ">
+                        <div class="col-lg-6 xs-reset-spacing padRight10">
+                          <img class="img-responsive" src="http://lorempixel.com/output/city-q-c-1335-890-10.jpg" />
+                        </div>
+                        <div class="col-lg-6 no-gutter-left padRight10">
+                          <h6># Ind vs Ban</h6>
+                          <h6>@Sportstar, jun 2015</h6>
+                          <p>Ashwin shines as rain hit test </p>
+                        </div>
+                      </div>
+                    </div>
+
+
+                  </div>
+                </div>
+              </div>
+
+              <!-- Top Story Area -->
+              <div class="row">
+                <!-- Top Story 1 -->
+                <div class="col-lg-6">
+                </div>
+                <!-- Story 2, 3 -->
+                <div class="col-lg-3">
+                  <!-- Story 2 -->
+                  <div class="col-lg-6">
+                  </div>
+                  <!-- Story 3 -->
+                  <div class="col-lg-6">
+                  </div>
+                </div>
+                <!-- Story 4, 5 -->
+                <div class="col-lg-3">
+                  <!-- Story 4 -->
+                  <div class="col-lg-6">
+                  </div>
+                  <!-- Story 5 -->
+                  <div class="col-lg-6">
+                  </div>
+                </div>
+              </div>
+
+              <!--  List 1 -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+
+              <!--  List 2 -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+              <!--  List 3 -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+              <!--  List Type 2(Editor's pick) -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+            </div>
+
+            <!-- Side Bar -->
+            <div class="col-lg-3 sideBar">
+              <!-- Side bar 1 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 2 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 3 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 4 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 5 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 6 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 7 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+              <!-- Side bar 8 -->
+              <div class="row">
+                <div class="col-lg-12">
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- full width 1(Strategy) -->
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- Main Graph Area -->
+          <div class="col-lg-8">
+          </div>
+
+          <!-- Summary and More Graph Area -->
+          <div class="col-lg-4">
+            <!-- Match summary place -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
+            </div>
+            <div class="row">
+            <!-- More Graph Area -->
+              <div class="col-lg-12">
+                <!-- Graph 1 -->
+                <div class="col-lg-4">
+                </div>
+                <!-- Graph 2 -->
+                <div class="col-lg-4">
+                </div>
+                <!-- Graph 3 -->
+                <div class="col-lg-4">
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <!-- Graph 4 -->
+                <div class="col-lg-4">
+                </div>
+                <!-- Graph 5 -->
+                <div class="col-lg-4">
+                </div>
+                <!-- Graph 6 -->
+                <div class="col-lg-4">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- full width 2(Slideshow) -->
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- Heading -->
+          <div class="row">
+          </div>
+          <!-- Main Slideshow -->
+          <div class="col-lg-7">
+          </div>
+          <!-- More Slideshows -->
+          <div class="col-lg-5">
+          </div>
+        </div>
+      </div>
+
+      <!-- full width 3(Video) -->
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- Heading -->
+          <div class="row">
+          </div>
+          <!-- Main Video -->
+          <div class="col-lg-7">
+          </div>
+          <!-- More Videos -->
+          <div class="col-lg-5">
+          </div>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
