Fixed side bar issue and tested app.js code

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="spacer10"></div>
             <!-- Trending Area -->
             <div class="col-lg-12 lavendarColor clearfix no-gutter testC carousel slide">
-              <div class="trendingArtHolder carousel-inner clearfix">\
-                
+              <div class="trendingArtHolder carousel-inner clearfix">
+
                 <div class="item active">
                   <div class="col-lg-4 no-gutter">
                     <div class="col-xs-12 col-lg-12">
@@ -150,233 +150,236 @@
                 <a class="left carousel-control" href=".testC" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
                 <a class="right carousel-control" href=".testC" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
               </div>
-            </div>
-          </div>
-          <!-- Top Story Area -->
-          <div class="row">
-            <!-- Top Story 1 -->
-            <div class="col-lg-6">
-            </div>
-            <!-- Story 2, 3 -->
-            <div class="col-lg-3">
-              <!-- Story 2 -->
-              <div class="col-lg-6">
+
+
+              <!-- Top Story Area -->
+              <div class="row">
+                <!-- Top Story 1 -->
+                <div class="col-lg-6">
+                </div>
+                <!-- Story 2, 3 -->
+                <div class="col-lg-3">
+                  <!-- Story 2 -->
+                  <div class="col-lg-6">
+                  </div>
+                  <!-- Story 3 -->
+                  <div class="col-lg-6">
+                  </div>
+                </div>
+                <!-- Story 4, 5 -->
+                <div class="col-lg-3">
+                  <!-- Story 4 -->
+                  <div class="col-lg-6">
+                  </div>
+                  <!-- Story 5 -->
+                  <div class="col-lg-6">
+                  </div>
+                </div>
               </div>
-              <!-- Story 3 -->
-              <div class="col-lg-6">
+
+              <!--  List 1 -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+
+              <!--  List 2 -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+              <!--  List 3 -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+              <!--  List Type 2(Editor's pick) -->
+              <div class="row">
+                <!-- Heading -->
+                <div class="lg-col-12">
+                </div>
+                <!--  List Story 1 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 2 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 3 -->
+                <div class="col-lg-3">
+                </div>
+                <!--  List Story 4 -->
+                <div class="col-lg-3">
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <!-- Side Bar -->
+          <div class="col-lg-3 sideBar">
+            <!-- Side bar 1 -->
+            <div class="row">
+              <div class="col-lg-12">
               </div>
             </div>
-            <!-- Story 4, 5 -->
-            <div class="col-lg-3">
-              <!-- Story 4 -->
-              <div class="col-lg-6">
-              </div>
-              <!-- Story 5 -->
-              <div class="col-lg-6">
+            <!-- Side bar 2 -->
+            <div class="row">
+              <div class="col-lg-12">
               </div>
             </div>
-          </div>
-
-          <!--  List 1 -->
-          <div class="row">
-            <!-- Heading -->
-            <div class="lg-col-12">
+            <!-- Side bar 3 -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
             </div>
-            <!--  List Story 1 -->
-            <div class="col-lg-3">
+            <!-- Side bar 4 -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
             </div>
-            <!--  List Story 2 -->
-            <div class="col-lg-3">
+            <!-- Side bar 5 -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
             </div>
-            <!--  List Story 3 -->
-            <div class="col-lg-3">
+            <!-- Side bar 6 -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
             </div>
-            <!--  List Story 4 -->
-            <div class="col-lg-3">
+            <!-- Side bar 7 -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
             </div>
-          </div>
-
-
-          <!--  List 2 -->
-          <div class="row">
-            <!-- Heading -->
-            <div class="lg-col-12">
-            </div>
-            <!--  List Story 1 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 2 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 3 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 4 -->
-            <div class="col-lg-3">
+            <!-- Side bar 8 -->
+            <div class="row">
+              <div class="col-lg-12">
+              </div>
             </div>
           </div>
 
-          <!--  List 3 -->
-          <div class="row">
-            <!-- Heading -->
-            <div class="lg-col-12">
-            </div>
-            <!--  List Story 1 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 2 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 3 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 4 -->
-            <div class="col-lg-3">
-            </div>
-          </div>
-
-          <!--  List Type 2(Editor's pick) -->
-          <div class="row">
-            <!-- Heading -->
-            <div class="lg-col-12">
-            </div>
-            <!--  List Story 1 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 2 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 3 -->
-            <div class="col-lg-3">
-            </div>
-            <!--  List Story 4 -->
-            <div class="col-lg-3">
-            </div>
-          </div>
         </div>
-
-        <!-- Side Bar -->
-        <div class="col-lg-3 sideBar">
-          <!-- Side bar 1 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 2 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 3 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 4 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 5 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 6 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 7 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-          <!-- Side bar 8 -->
-          <div class="row">
-            <div class="col-lg-12">
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <!-- full width 1(Strategy) -->
-  <div class="row">
-    <div class="col-lg-12">
-      <!-- Main Graph Area -->
-      <div class="col-lg-8">
+    <!-- full width 1(Strategy) -->
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- Main Graph Area -->
+        <div class="col-lg-8">
+        </div>
+
+        <!-- Summary and More Graph Area -->
+        <div class="col-lg-4">
+          <!-- Match summary place -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <div class="row">
+            <!-- More Graph Area -->
+            <div class="col-lg-12">
+              <!-- Graph 1 -->
+              <div class="col-lg-4">
+              </div>
+              <!-- Graph 2 -->
+              <div class="col-lg-4">
+              </div>
+              <!-- Graph 3 -->
+              <div class="col-lg-4">
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <!-- Graph 4 -->
+              <div class="col-lg-4">
+              </div>
+              <!-- Graph 5 -->
+              <div class="col-lg-4">
+              </div>
+              <!-- Graph 6 -->
+              <div class="col-lg-4">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
 
-      <!-- Summary and More Graph Area -->
-      <div class="col-lg-4">
-        <!-- Match summary place -->
+    <!-- full width 2(Slideshow) -->
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- Heading -->
         <div class="row">
-          <div class="col-lg-12">
-          </div>
         </div>
+        <!-- Main Slideshow -->
+        <div class="col-lg-7">
+        </div>
+        <!-- More Slideshows -->
+        <div class="col-lg-5">
+        </div>
+      </div>
+    </div>
+
+    <!-- full width 3(Video) -->
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- Heading -->
         <div class="row">
-          <!-- More Graph Area -->
-          <div class="col-lg-12">
-            <!-- Graph 1 -->
-            <div class="col-lg-4">
-            </div>
-            <!-- Graph 2 -->
-            <div class="col-lg-4">
-            </div>
-            <!-- Graph 3 -->
-            <div class="col-lg-4">
-            </div>
-          </div>
-          <div class="col-lg-12">
-            <!-- Graph 4 -->
-            <div class="col-lg-4">
-            </div>
-            <!-- Graph 5 -->
-            <div class="col-lg-4">
-            </div>
-            <!-- Graph 6 -->
-            <div class="col-lg-4">
-            </div>
-          </div>
+        </div>
+        <!-- Main Video -->
+        <div class="col-lg-7">
+        </div>
+        <!-- More Videos -->
+        <div class="col-lg-5">
         </div>
       </div>
     </div>
-  </div>
-
-  <!-- full width 2(Slideshow) -->
-  <div class="row">
-    <div class="col-lg-12">
-      <!-- Heading -->
-      <div class="row">
-      </div>
-      <!-- Main Slideshow -->
-      <div class="col-lg-7">
-      </div>
-      <!-- More Slideshows -->
-      <div class="col-lg-5">
-      </div>
-    </div>
-  </div>
-
-  <!-- full width 3(Video) -->
-  <div class="row">
-    <div class="col-lg-12">
-      <!-- Heading -->
-      <div class="row">
-      </div>
-      <!-- Main Video -->
-      <div class="col-lg-7">
-      </div>
-      <!-- More Videos -->
-      <div class="col-lg-5">
-      </div>
-    </div>
-  </div>
 
   </div>
+
 </body>
 
 
