--- a/index.html
+++ b/index.html
@@ -178,156 +178,160 @@
             <!-- Top Story Area -->
             <div class="row">
               <!-- Top Story 1 -->
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-sm-12">
+                <img class="img-responsive" src="img/img1.jpg" />
               </div>
               <!-- Story 2, 3 -->
-              <div class="col-lg-3">
-                <!-- Story 2 -->
-                <div class="col-lg-6">
-                </div>
-                <!-- Story 3 -->
-                <div class="col-lg-6">
-                </div>
-              </div>
-              <!-- Story 4, 5 -->
-              <div class="col-lg-3">
-                <!-- Story 4 -->
-                <div class="col-lg-6">
-                </div>
-                <!-- Story 5 -->
-                <div class="col-lg-6">
-                </div>
-              </div>
-            </div>
 
-            <!--  List 1 -->
-            <div class="row">
-              <!-- Heading -->
-              <div class="lg-col-12">
+              <div class="col-lg-3 col-sm-6 col-xs-6" style="padding-left:0;">
+                <img class="img-responsive" src="img/img2.jpg" />
               </div>
-              <!--  List Story 1 -->
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-sm-6 col-xs-6" style="padding-left:0;">
+                <img class="img-responsive" src="img/img3.jpg" />
               </div>
-              <!--  List Story 2 -->
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-sm-6 col-xs-6" style="padding-left:0;">
+                <img class="img-responsive" src="img/img4.jpg" />
               </div>
-              <!--  List Story 3 -->
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-sm-6 col-xs-6" style="padding-left:0;">
+                <img class="img-responsive" src="img/img5.jpg" />
               </div>
-              <!--  List Story 4 -->
-              <div class="col-lg-3">
-              </div>
+
+
             </div>
 
 
-            <!--  List 2 -->
-            <div class="row">
-              <!-- Heading -->
-              <div class="lg-col-12">
-              </div>
-              <!--  List Story 1 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 2 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 3 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 4 -->
-              <div class="col-lg-3">
-              </div>
-            </div>
 
-            <!--  List 3 -->
-            <div class="row">
-              <!-- Heading -->
-              <div class="lg-col-12">
-              </div>
-              <!--  List Story 1 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 2 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 3 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 4 -->
-              <div class="col-lg-3">
-              </div>
-            </div>
-
-            <!--  List Type 2(Editor's pick) -->
-            <div class="row">
-              <!-- Heading -->
-              <div class="lg-col-12">
-              </div>
-              <!--  List Story 1 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 2 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 3 -->
-              <div class="col-lg-3">
-              </div>
-              <!--  List Story 4 -->
-              <div class="col-lg-3">
-              </div>
-            </div>
 
           </div>
 
-
-          <!-- Side Bar -->
-          <div class="col-lg-3 sideBar">
-            <!-- Side bar 1 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
+          <!--  List 1 -->
+          <div class="row">
+            <!-- Heading -->
+            <div class="lg-col-12">
             </div>
-            <!-- Side bar 2 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
+            <!--  List Story 1 -->
+            <div class="col-lg-3">
             </div>
-            <!-- Side bar 3 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
+            <!--  List Story 2 -->
+            <div class="col-lg-3">
             </div>
-            <!-- Side bar 4 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
+            <!--  List Story 3 -->
+            <div class="col-lg-3">
             </div>
-            <!-- Side bar 5 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
-            </div>
-            <!-- Side bar 6 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
-            </div>
-            <!-- Side bar 7 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
-            </div>
-            <!-- Side bar 8 -->
-            <div class="row">
-              <div class="col-lg-12">
-              </div>
+            <!--  List Story 4 -->
+            <div class="col-lg-3">
             </div>
           </div>
-          <!-- Side Bar Ends -->
+
+
+          <!--  List 2 -->
+          <div class="row">
+            <!-- Heading -->
+            <div class="lg-col-12">
+            </div>
+            <!--  List Story 1 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 2 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 3 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 4 -->
+            <div class="col-lg-3">
+            </div>
+          </div>
+
+          <!--  List 3 -->
+          <div class="row">
+            <!-- Heading -->
+            <div class="lg-col-12">
+            </div>
+            <!--  List Story 1 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 2 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 3 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 4 -->
+            <div class="col-lg-3">
+            </div>
+          </div>
+
+          <!--  List Type 2(Editor's pick) -->
+          <div class="row">
+            <!-- Heading -->
+            <div class="lg-col-12">
+            </div>
+            <!--  List Story 1 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 2 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 3 -->
+            <div class="col-lg-3">
+            </div>
+            <!--  List Story 4 -->
+            <div class="col-lg-3">
+            </div>
+          </div>
 
         </div>
+
+
+        <!-- Side Bar -->
+        <div class="col-lg-3 sideBar">
+          <!-- Side bar 1 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 2 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 3 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 4 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 5 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 6 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 7 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+          <!-- Side bar 8 -->
+          <div class="row">
+            <div class="col-lg-12">
+            </div>
+          </div>
+        </div>
+        <!-- Side Bar Ends -->
+
       </div>
     </div>
+  </div>
   </div>
 
   <!-- full width 1(Strategy) -->
